2006-05-19  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_enhanced_text):
	Remove unappropriate comments about enhanced_max_height.
	(gp_cairo_end_polygon): Remove useless comment.
	(gp_cairo_convert_symbol_to_unicode): Change C++-style
	comments to C style /* ... */.

2006-05-18  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/Makefile.am (AUTOMAKE_OPTIONS): Remove 'subdir-objects',
	not mandatory.

	* configure.in (enable_wxwidgets): Remove test AM_PROG_CC_C_O,
	not needed now that 'subdir-objects' is not used.

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput) [_Windows]:
	Rework event processing to avoid code duplication and handle
	more cases (pause, etc.).
	(wxt_waitforinput_pause) [_Windows]: Removed.
	(wxt_terminal_events) [_Windows]: New routine to process
	pending events from the wxWidgets terminal when it is selected
	and initialized. Its return code is used to stop a pause.
	(wxt_set_font): Use reasonable defaults for font name ("Sans")
	and size (10) instead of the wxWidgets system settings. It
	avoids to choose the inappropriate Courier font on Windows,
	where it is used by the console-like window.

	* src/wxterminal/wxt_term.h (wxt_waitforinput_pause):
	Remove declaration.

	* src/wxterminal/wxt_plot.h (wxt_terminal_events):
	Declaration.

	* src/win/wpause.c (PauseBox) [WXWIDGETS]: Use
	wxt_terminal_events().

	* src/win/wtext.c (TextGetCh) [WXWIDGETS]: Likewise.

	* term/wxt.trm (help): Change the help text according to the
	change in the default font name and font size.

2006-05-15  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Cross-platform cursors.

	* src/wxterminal/wxt_gui.h
	(wxt_cursor_cross, wxt_cursor_right, wxt_cursor_rotate,
	wxt_cursor_size): Cursors declarations.
	(wxtApp::LoadCursor): Routine to initialize a cursor.
